--- a/css/index.css
+++ b/css/index.css
@@ -26,6 +26,11 @@ section > p {
   margin-bottom: 5px;
 }
 
+.flex {
+  display: flex;
+  flex-direction: row;
+}
+
 .container {
   height: 100%;
   display: flex;
@@ -34,14 +39,41 @@ section > p {
 }
 
 .card {
-  position: relative;
-  display: flex;
-  flex-direction: row;
   width: 681px;
   height: 210px;
+  font-family: "Roboto", sans-serif;
+  perspective: 1000px;
+  background-color: transparent;
+}
+
+.card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
   box-shadow: 0px 0px 3px 2px rgba(10, 10, 10, 0.1);
   background-color: #fff;
-  font-family: 'Roboto', sans-serif;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+}
+
+.card-front,
+.card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+.card-front {
+  z-index: 1;
+}
+
+.card-back {
+  transform: rotateY(180deg);
+}
+
+.flip {
+  transform: rotateY(180deg);
 }
 
 .card-image {
@@ -60,7 +92,6 @@ section > p {
   padding: 15px;
   display: flex;
   flex-direction: column;
-  z-index: 1;
 }
 
 .card-header {
@@ -104,8 +135,9 @@ section > p {
 }
 
 .card-button {
-  flex: 1;
   padding: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
   background: #e6e7e9;
   box-shadow: 0px 0px 0px transparent;
   border: 0px solid transparent;
@@ -115,4 +147,13 @@ section > p {
 
 .card-button.primary {
   background-color: #f9bd11;
+}
+
+.card-button.highlighted {
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+.card-button.full {
+  flex: 1;
 }
