--- a/css/index.css
+++ b/css/index.css
@@ -7,16 +7,22 @@ html {
   background-color: #0e0e0e;
 }
 
+section {
+  margin-top: 3px;
+  margin-bottom: 3px;
+}
+
 section > h1 {
   font-size: 15px;
   text-transform: uppercase;
   line-height: 9px;
-  margin-top: 5px;
-  margin-bottom: 5px;
+  margin-top: 2px;
+  margin-bottom: 2px;
 }
 
 section > p {
   font-size: 15px;
+  font-weight: 300;
   margin-top: 5px;
   margin-bottom: 5px;
 }
