--- a/css/card.css
+++ b/css/card.css
@@ -37,7 +37,6 @@
 
 .card-image {
   width: 255px;
-  /* height: 100%; */
 }
 
 .card-container {
@@ -131,6 +130,10 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+  }
+
+  .card-front.new-marker {
+    background-position: 100% 210px;
   }
 
   .card-image {
