--- a/css/card.css
+++ b/css/card.css
@@ -56,9 +56,9 @@
 
 .card-header > h1 {
   margin: 0;
-  font-size: 19px;
-  font-weight: 500;
-  line-height: 20px;
+  font-size: 28px;
+  font-weight: 700;
+  line-height: 25px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -66,9 +66,19 @@
 
 .card-header > h2 {
   margin: 0;
-  font-size: 28px;
-  font-weight: 700;
-  line-height: 25px;
+  font-size: 22px;
+  font-weight: 600;
+  line-height: 22px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.card-header > h3 {
+  margin: 0;
+  font-size: 19px;
+  font-weight: 500;
+  line-height: 20px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -79,6 +89,11 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+.card-content.scrollable {
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 
 .card-footer {
