--- a/css/globals.css
+++ b/css/globals.css
@@ -12,6 +12,31 @@ section {
   margin-bottom: 3px;
 }
 
+.scrollable > section {
+  height: 100%;
+}
+
+.scrollable > section > h1 {
+  font-size: 14px;
+  text-transform: initial;
+  line-height: 14px;
+  margin-top: 2px;
+  margin-bottom: 2px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.scrollable > section > p {
+  font-size: 13px;
+  font-weight: 300;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  white-space: initial;
+  overflow: initial;
+  text-overflow: initial;
+}
+
 section > h1 {
   font-size: 15px;
   text-transform: uppercase;
