--- a/css/helpers.css
+++ b/css/helpers.css
@@ -13,3 +13,20 @@
 .flip {
   transform: rotateY(-180deg);
 }
+
+.scrollable {
+  overflow-y: auto;
+}
+
+.fade {
+  position: absolute;
+  bottom: 0px;
+  display: block;
+  width: 100%;
+  height: 50px;
+  background-image: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 0),
+    rgba(255, 255, 255, 0.9) 100%
+  );
+}
