--- a/css/helpers.css
+++ b/css/helpers.css
@@ -10,12 +10,53 @@
   flex-direction: row;
 }
 
+.full {
+  flex: 1;
+}
+
 .flip {
   transform: rotateY(-180deg);
 }
 
 .scrollable {
+  position: relative;
+  height: 100%;
+}
+
+.scrollable > div {
   overflow-y: auto;
+  height: 100%;
+  padding-right: 10px;
+  padding-bottom: 25px;
+}
+
+.scrollable:before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  background: linear-gradient(to bottom, transparent, white);
+  height: 25px;
+  margin-right: 15px;
+  left: 0;
+  right: 0;
+}
+
+.scrollable h1 {
+  font-size: 14px;
+  text-transform: initial;
+  line-height: 14px;
+  margin-top: 2px;
+  margin-bottom: 2px;
+}
+
+.scrollable p {
+  font-size: 13px;
+  font-weight: 300;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  white-space: initial;
+  overflow: initial;
+  text-overflow: initial;
 }
 
 .fade {
@@ -29,4 +70,10 @@
     rgba(255, 255, 255, 0),
     rgba(255, 255, 255, 0.9) 100%
   );
+}
+
+.text-ellipsis {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
