--- a/css/elements.css
+++ b/css/elements.css
@@ -13,7 +13,6 @@
 }
 
 .button {
-  padding: 5px;
   padding-left: 10px;
   padding-right: 10px;
   height: 30px;
@@ -26,7 +25,7 @@
 }
 
 .button:hover {
-  background: #c5c6c7;
+  background: #d4d6d5;
 }
 
 .button.primary {
@@ -39,6 +38,11 @@
 }
 
 .button.highlighted {
-  padding-left: 30px;
-  padding-right: 30px;
+  width: 200px;
+}
+
+.button.icon-flip:hover {
+  background-image: url("../img/icon_flip.png");
+  background-repeat: no-repeat;
+  background-position: 15px 50%;
 }
