Corrigido pequena distorçao que ocorre no conteudo ao dar o flip do card

--- a/css/card.css
+++ b/css/card.css
@@ -1,7 +1,7 @@
 .card {
   width: 681px;
   height: 210px;
-  perspective: 1000px;
+  perspective: 1500px;
   background-color: transparent;
   padding: 15px;
   font-family: "Roboto", sans-serif;
@@ -42,7 +42,7 @@
 .card-container {
   width: 100%;
   height: 100%;
-  padding: 2%;
+  padding: 15px;
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
@@ -79,7 +79,6 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
 }
 
 .card-content.scrollable {
