--- a/css/elements.css
+++ b/css/elements.css
@@ -46,3 +46,9 @@
   background-repeat: no-repeat;
   background-position: 15px 50%;
 }
+
+@media screen and (min-width: 600px) and (max-width: 720px) {
+  .button-group button {
+    font-size: 10px;
+  }
+}
