--- a/css/card.css
+++ b/css/card.css
@@ -27,6 +27,7 @@
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
+  -webkit-backface-visibility: hidden; /* needed for Safari */
   transform: rotateX(0deg)
 }
 
